<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="detail"
            type="com.ismailhakkiaydin.weather.model.CityDailyResponse.Forecast" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytDetailLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layoutBackgroundImage="@{detail.weather.get(0).icon}"
        tools:context=".CityDailyDetailFragment">


        <View
            android:id="@+id/locationBacgroundView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/crdDetailPressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/crdDetailPressure"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="72dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/crdDetailWind"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pressure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{String.valueOf(detail.main.pressure)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pressure" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdDetailWind"
            android:layout_width="0dp"
            android:layout_height="105dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/crdDetailPressure"
            app:layout_constraintEnd_toStartOf="@+id/crdDetailHumidity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/crdDetailPressure"
            app:layout_constraintTop_toTopOf="@+id/crdDetailPressure">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{String.valueOf(detail.wind.speed)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wind" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdDetailHumidity"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/crdDetailWind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/crdDetailWind"
            app:layout_constraintTop_toTopOf="@+id/crdDetailWind">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_humidity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{String.valueOf(detail.main.humidity)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_humidity" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="72sp"
            android:converterInt="@{detail.main.temp}"
            app:layout_constraintBottom_toTopOf="@+id/txtState"
            app:layout_constraintEnd_toEndOf="@+id/crdDetailPressure"
            app:layout_constraintStart_toStartOf="@+id/crdDetailPressure" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="°C"
            android:textSize="26sp"
            app:layout_constraintStart_toEndOf="@+id/txtTemperature"
            app:layout_constraintTop_toTopOf="@+id/txtTemperature" />

        <TextView
            android:id="@+id/txtState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:textSize="16sp"
            android:text="@{detail.weather.get(0).description}"
            app:layout_constraintBottom_toBottomOf="@+id/locationBacgroundView"
            app:layout_constraintEnd_toEndOf="@+id/txtTemperature"
            app:layout_constraintStart_toStartOf="@+id/txtTemperature" />

        <ImageView
            android:id="@+id/imgDetailState"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginEnd="8dp"
            imageResource="@{detail.weather.get(0).icon}"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/crdDetailHumidity" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:dayConverter="@{detail.dt}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{detail.name}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/txtDate"
            app:layout_constraintStart_toStartOf="@+id/txtDate"
            app:layout_constraintTop_toBottomOf="@+id/txtDate" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Feels Like"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imgDetailState"
            app:layout_constraintStart_toStartOf="@+id/imgDetailState"
            app:layout_constraintTop_toBottomOf="@+id/imgDetailState" />

        <TextView
            android:id="@+id/txtFeels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:converterInt="@{detail.main.feelsLike}"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="°"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtFeels"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>